--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ li{
 .line-footer{
     height: 3px;
     width: 15%;
-    background: #E83354;
+    background: #97D700;
     display: inline-block;
 }
 .footer{
@@ -143,7 +143,7 @@ li{
 	color: black;
 }
 .bi-facebook:hover, .bi-instagram:hover, .bi-linkedin:hover, .bi-twitter:hover{
-    color: #E83354;
+    color: #97D700;
 }
 /*************** Main ****************/
 /* image */
