--- a/components/header.html
+++ b/components/header.html
@@ -1,58 +1,28 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>World Hunger</title>
-  <!-- browser icon -->
-  <link rel="icon" href="./img/logo2.png" type="image/png">
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/style-header.css">
-  <link rel="stylesheet" href="./css/style-footer.css">
-  <!-- bootstrap 5 link -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
-  <!-- bootstrap icons-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
-  <!-- script jquery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <!-- javascript header & footer function -->
-  <script rel="javascript" src="./js/dark-theme.js"></script>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg pb-2 mb-0 bg-color-light"> 
-  <div class="container pb-3 bg-color-light">
-    <a class="navbar-brand mt-3 bg-color-light" href="index.html"><img src="img/logo.png" class="img-fluid bg-color-light"></a>
-    <button class="navbar-toggler bg-color-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon pt-1 bg-color-light"><i class="bi bi-list bg-color-light"></i></span>
+<nav class="navbar navbar-expand-lg pb-2 bg-light mb-0"> 
+  <div class="container bg-light pb-3">
+    <a class="navbar-brand bg-light mt-3" href="index.html"><img src="img/logo.png" class="img-fluid bg-light"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon pt-1"><i class="bi bi-list bg-light"></i></span>
     </button>
-    <div class="collapse navbar-collapse align-bottom mt-4 bg-color-light" id="navbarSupportedContent">
-      <ul class="navbar-nav mt-0 m-auto mb-4 mb-lg-0 bg-color-light">
-        <li class="nav-item mt-3 bg-color-light">
-          <a class="nav-link active bg-color-light" aria-current="page" href="../a-crise-da-fome.html">A CRISE DA FOME</a>
+    <div class="collapse navbar-collapse bg-light align-bottom mt-4" id="navbarSupportedContent">
+      <ul class="navbar-nav mt-0 m-auto mb-4 mb-lg-0 bg-light">
+        <li class="nav-item mt-3 bg-light">
+          <a class="nav-link active bg-light" aria-current="page" href="../a-crise-da-fome.html">A CRISE DA FOME</a>
         </li>
-        <li class="nav-item mt-3 bg-color-light">
-          <a class="nav-link active bg-color-light" aria-current="page" href="../impacto-global.html">IMPACTO GLOBAL</a>
+        <li class="nav-item mt-3 bg-light">
+          <a class="nav-link active bg-light" aria-current="page" href="../impacto-global.html">IMPACTO GLOBAL</a>
         </li>
-        <li class="nav-item mt-3 bg-color-light">
-          <a class="nav-link active bg-color-light" aria-current="page" href="../fome-zero.html">FOME ZERO</a>
+        <li class="nav-item mt-3 bg-light">
+          <a class="nav-link active bg-light" aria-current="page" href="../fome-zero.html">FOME ZERO</a>
         </li>
-        <li class="nav-item mt-3 bg-color-light">
-          <a class="nav-link active bg-color-light" aria-current="page" href="../tome-uma-atitude.html">TOME UMA ATITUDE</a>
+        <li class="nav-item mt-3 bg-light">
+          <a class="nav-link active bg-light" aria-current="page" href="../tome-uma-atitude.html">TOME UMA ATITUDE</a>
         </li>
       </ul>
-      <form class="d-flex mt-0 bg-color-light">
-        <input class="px-2 search bg-color-light" type="search" placeholder="Pesquisar" aria-label="Search">
-        <button class="btn1 px-3 bg-color-light" type="submit"><i class="bi bi-search bg-color-light"></i></button>
+      <form class="d-flex mt-0 bg-light">
+        <input class="px-2 search" type="search" placeholder="Pesquisar" aria-label="Search">
+        <button class="btn1 px-3" type="submit"><i class="bi bi-search"></i></button>
       </form>
   </div>
 </div>
 </nav>
-</body>
-</html>
