--- a/css/style-header.css
+++ b/css/style-header.css
@@ -1,7 +1,4 @@
 /*************** NavBar ****************/
-.navbar{
-    width: 100%;
-}
 .navbar-toggler-icon{
     background-color: #f8f9fa;
 }
@@ -43,6 +40,7 @@
     outline: none;
     background-color: transparent;
     color: black;
+    background-color: #f8f9fa;
     border-radius: 0px 20px 20px 0px;
     transition: all 0.4s;
 }
@@ -65,52 +63,4 @@
 .bi.bi-search:hover{
     color: white;
     background-color: transparent;
-}
-/*************** Footer ****************/
-li{
-	list-style: none;
-	text-decoration: none;
-}
-.line-footer{
-    height: 3px;
-    width: 15%;
-    background: #97D700;
-    display: inline-block;
-}
-.footer{
-    padding: 70px 0;
-}
-.img-logo{
-    background-color: transparent;
-}
-/* text-light */
-.text-light a{
-	text-decoration: none;
-	font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-	font-size: 15px;   
-    color: black;
-    transition: all 0.4s;
-}
-.text-light a:active, a:visited, a:link{
-    color: black;
-}
-.text-light a:hover{
-    color: #626567;
-}
-/* social media */
-.bi-facebook{
-	color: black;
-}
-.bi-instagram{
-	color: black;
-}
-.bi-twitter{
-	color: black;
-}
-.bi-linkedin{
-	color: black;
-}
-.bi-facebook:hover, .bi-instagram:hover, .bi-linkedin:hover, .bi-twitter:hover{
-    color: #97D700;
 }
