--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,13 @@
 /*************** General ***************/
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: white;
+}
 p{
     font-family: 'Montserrat', sans-serif;
     text-align: justify;
-}
-.bg-color-light{
-    background-color: #f8f9fa;
-}
-.bg-color-dark{
-    color: white;
-    border-color: white;
-    background-color: #0a0a0a;
-}
-.bg-color-dark-body{
-    color: white;
-    border-color: white;
-    background-color: #292929;
 }
 /*************** Line ***************/
 .line{
@@ -28,122 +21,6 @@ p{
     width: 25%;
     background: #97D700;
     display: inline-block;
-}
-/*************** NavBar ****************/
-.navbar{
-    width: 100%;
-}
-.navbar-toggler-icon{
-    background-color: #f8f9fa;
-}
-.nav-item a{
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-    text-transform: uppercase;
-    margin-right: 15px;
-    transition: all 0.4s;
-}
-.nav-item a:active{
-    color: black;
-}
-.nav-item a:visited{
-    color: black;
-}
-.nav-item a:link{
-    color: black;
-}
-.nav-item a:hover{
-    color: #626567;
-}
-.navbar-brand{
-    height: 50px;
-    width: 100px;
-}
-/* search */
-.search{
-    height: 45px;
-    outline: none;
-    border: 2px solid black;
-    background-color: transparent;
-    border-radius: 20px 0px 0px 20px;
-    border-right: none;
-}
-.btn1{
-    height: 45px;
-    outline: none;
-    background-color: transparent;
-    color: black;
-    border-radius: 0px 20px 20px 0px;
-    transition: all 0.4s;
-}
-.btn1:hover{
-    color: white;
-    background-color: black;
-}
-/* menu list */
-.navbar-toggler{
-    font-size: 23px;
-    color: black;
-}
-.navbar-toggler:focus{
-    outline: none;
-    box-shadow: none;
-}
-.bi.bi-search{
-    background-color: transparent;
-}
-.bi.bi-search:hover{
-    color: white;
-    background-color: transparent;
-}
-/*************** Footer ****************/
-li{
-	list-style: none;
-	text-decoration: none;
-}
-.line-footer{
-    height: 3px;
-    width: 15%;
-    background: #97D700;
-    display: inline-block;
-}
-.footer{
-    padding: 70px 0;
-}
-.img-logo{
-    background-color: transparent;
-}
-/* text-light */
-.text-light a{
-	text-decoration: none;
-	font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-	font-size: 15px;   
-    color: black;
-    transition: all 0.4s;
-}
-.text-light a:active, a:visited, a:link{
-    color: black;
-}
-.text-light a:hover{
-    color: #626567;
-}
-/* social media */
-.bi-facebook{
-	color: black;
-}
-.bi-instagram{
-	color: black;
-}
-.bi-twitter{
-	color: black;
-}
-.bi-linkedin{
-	color: black;
-}
-.bi-facebook:hover, .bi-instagram:hover, .bi-linkedin:hover, .bi-twitter:hover{
-    color: #97D700;
 }
 /*************** Main ****************/
 /* image */
@@ -167,12 +44,6 @@ li{
     color: #979A9A;
 }
 /* button */
-.mbtn-dark{
-    color: white;
-}
-.mbtn-light{
-    color: black;
-}
 .mbtn1{
     height: 50px;
     width: 25%;
@@ -190,6 +61,7 @@ li{
     outline: none;
     border: 1.5px solid;
     background-color: transparent;
+    color: black;
     border-radius: 50px;
     transition: all 0.4s;
 }
