Ajustando a forma que as classes para ativar o dark-theme eram alteradas, pois nem todos os elementos eram mudados para dark

--- a/components/header.html
+++ b/components/header.html
@@ -23,7 +23,7 @@
   <!-- script jquery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <!-- javascript header & footer function -->
-  <script rel="javascript" src="./js/dark-theme.js"></script>
+  <!-- <script rel="javascript" src="./js/dark-theme.js"></script> -->
 </head>
 <body>
 <nav class="navbar navbar-expand-lg pb-2 mb-0 bg-color-light"> 
