--- a/components/footer.html
+++ b/components/footer.html
@@ -1,40 +1,40 @@
-<footer class="footer bg-color-light">
-    <div class="container bg-color-light">
-        <div class="row bg-color-light">
-            <div class="col-lg-3 my-2 bg-color-light">
-                <h4  class="bg-color-light">Company</h4>
+<footer class="footer bg-color">
+    <div class="container bg-color">
+        <div class="row bg-color">
+            <div class="col-lg-3 my-2 bg-color">
+                <h4  class="bg-color">Company</h4>
                 <div class="line-footer mb-3"></div>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">About us</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Our services</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Privacy policy</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Affiliate program</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">About us</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Our services</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Privacy policy</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Affiliate program</a></li>
             </div>
-            <div class="col-lg-3 my-2 bg-color-light">
-                <h4 class="bg-color-light">Help</h4>
+            <div class="col-lg-3 my-2 bg-color">
+                <h4 class="bg-color">Help</h4>
                 <div class="line-footer mb-3"></div>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">About us</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Our services</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Privacy policy</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Affiliate program</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">About us</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Our services</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Privacy policy</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Affiliate program</a></li>
             </div>
-            <div class="col-lg-3 my-2 bg-color-light">
-                <h4 class="bg-color-light">Something</h4>   
+            <div class="col-lg-3 my-2 bg-color">
+                <h4 class="bg-color">Something</h4>   
                 <div class="line-footer mb-3"></div>            
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">About us</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Our services</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Privacy policy</a></li>
-                <li class="bg-color-light"><a class="text-light bg-color-light" href="#">Affiliate program</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">About us</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Our services</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Privacy policy</a></li>
+                <li class="bg-color"><a class="text-light bg-color" href="#">Affiliate program</a></li>
             </div>
             
-            <div class="col-lg-3 my-2 bg-color-light">
-                <h4 class="bg-color-light">Follow us</h4>
+            <div class="col-lg-3 my-2 bg-color">
+                <h4 class="bg-color">Follow us</h4>
                 <div class="line-footer mb-3"></div>
-                <h2 class="bg-color-light">
-                    <a class="m-0 bg-color-light" href="#"><i class="bi bi-facebook bg-color-light"></i></a>
-                    <a class="m-2 bg-color-light"></a>
-                    <a class="m-2 bg-color-light" href="#"><i class="bi bi-twitter bg-color-light"></i></a>
-                    <a class="m-2 bg-color-light" href="#"><i class="bi bi-instagram bg-color-light"></i></a>
-                    <a class="m-2 bg-color-light" href="#"><i class="bi bi-linkedin bg-color-light"></i></a>
+                <h2 class="bg-color">
+                    <a class="m-0 bg-color" href="#"><i class="bi bi-facebook bg-color"></i></a>
+                    <a class="m-2 bg-color"></a>
+                    <a class="m-2 bg-color" href="#"><i class="bi bi-twitter bg-color"></i></a>
+                    <a class="m-2 bg-color" href="#"><i class="bi bi-instagram bg-color"></i></a>
+                    <a class="m-2 bg-color" href="#"><i class="bi bi-linkedin bg-color"></i></a>
                 </h2>
             </div>
         </div>
