--- a/components/header.html
+++ b/components/header.html
@@ -26,30 +26,30 @@
   <!-- <script rel="javascript" src="./js/dark-theme.js"></script> -->
 </head>
 <body>
-<nav class="navbar navbar-expand-lg pb-2 mb-0 bg-color-light"> 
-  <div class="container pb-3 bg-color-light">
-    <a class="navbar-brand mt-3 bg-color-light" href="index.html"><img src="img/logo.png" class="img-fluid bg-color-light"></a>
-    <button class="navbar-toggler bg-color-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon pt-1 bg-color-light"><i class="bi bi-list bg-color-light"></i></span>
+<nav class="navbar navbar-expand-lg pb-2 mb-0 bg-color"> 
+  <div class="container pb-3 bg-color">
+    <a class="navbar-brand mt-3 bg-color" href="index.html"><img src="img/logo.png" class="img-fluid bg-color"></a>
+    <button class="navbar-toggler bg-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon pt-1 bg-color"><i class="bi bi-list bg-color"></i></span>
     </button>
-    <div class="collapse navbar-collapse align-bottom mt-4 bg-color-light" id="navbarSupportedContent">
-      <ul class="navbar-nav mt-0 m-auto mb-4 mb-lg-0 bg-color-light">
-        <li class="nav-item mt-3 bg-color-light">
-          <a class="nav-link active bg-color-light" aria-current="page" href="../a-crise-da-fome.html">A CRISE DA FOME</a>
+    <div class="collapse navbar-collapse align-bottom mt-4 bg-color" id="navbarSupportedContent">
+      <ul class="navbar-nav mt-0 m-auto mb-4 mb-lg-0 bg-color">
+        <li class="nav-item mt-3 bg-color">
+          <a class="nav-link active bg-color" aria-current="page" href="../a-crise-da-fome.html">A CRISE DA FOME</a>
         </li>
-        <li class="nav-item mt-3 bg-color-light">
-          <a class="nav-link active bg-color-light" aria-current="page" href="../impacto-global.html">IMPACTO GLOBAL</a>
+        <li class="nav-item mt-3 bg-color">
+          <a class="nav-link active bg-color" aria-current="page" href="../impacto-global.html">IMPACTO GLOBAL</a>
         </li>
-        <li class="nav-item mt-3 bg-color-light">
-          <a class="nav-link active bg-color-light" aria-current="page" href="../fome-zero.html">FOME ZERO</a>
+        <li class="nav-item mt-3 bg-color">
+          <a class="nav-link active bg-color" aria-current="page" href="../fome-zero.html">FOME ZERO</a>
         </li>
-        <li class="nav-item mt-3 bg-color-light">
-          <a class="nav-link active bg-color-light" aria-current="page" href="../tome-uma-atitude.html">TOME UMA ATITUDE</a>
+        <li class="nav-item mt-3 bg-color">
+          <a class="nav-link active bg-color" aria-current="page" href="../tome-uma-atitude.html">TOME UMA ATITUDE</a>
         </li>
       </ul>
-      <form class="d-flex mt-0 bg-color-light">
-        <input class="px-2 search bg-color-light" type="search" placeholder="Pesquisar" aria-label="Search">
-        <button class="btn1 px-3 bg-color-light" type="submit"><i class="bi bi-search bg-color-light"></i></button>
+      <form class="d-flex mt-0 bg-color">
+        <input class="px-2 search bg-color" type="search" placeholder="Pesquisar" aria-label="Search">
+        <button class="btn1 px-3 bg-color" type="submit"><i class="bi bi-search bg-color"></i></button>
       </form>
   </div>
 </div>
