--- a/css/style-header.css
+++ b/css/style-header.css
@@ -47,6 +47,7 @@
     border-radius: 20px 0px 0px 20px;
     border-right: none;
 }
+
 .btn1{
     height: 45px;
     outline: none;
@@ -59,6 +60,11 @@
     color: white;
     background-color: var(--bg-color);
 }
+
+.btn-theme {
+    
+}
+
 /* menu list */
 .navbar-toggler{
     font-size: 23px;
