Ajustando mudança de tema e isolando funções js para arquivos separados

--- a/components/header.html
+++ b/components/header.html
@@ -52,6 +52,7 @@
         <button class="btn1 px-3 bg-color" type="submit"><i class="bi bi-search bg-color"></i></button>
       </form>
       <i id="btn-toggle-theme" class="btn-theme px-3 bi bi-moon bg-color"></i>
+      <i id="btn-toggle-theme" class="btn-theme px-3 bi bi-sun bg-color"></i>
   </div>
 </div>
 </nav>
