--- a/css/style-header.css
+++ b/css/style-header.css
@@ -1,12 +1,9 @@
 /*************** NavBar ****************/
 /* @import url("style.css") root; */
-/* :root {
-    --bg-color-body: #f8f9fa;
-    --border-color-body: black;
-    --bg-color: black;
-    --bg-border-color: black;
-    --bg-background-color: #f8f9fa;
-} */
+:root {
+    --visibility-btn-moon: hidden;
+    --visibility-btn-sun: hidden;
+}
 
 .navbar{
     width: 100%;
@@ -47,7 +44,9 @@
     border-radius: 20px 0px 0px 20px;
     border-right: none;
 }
-
+/* .btn1 i:hover {
+    color: var(--bg-background-color);
+} */
 .btn1{
     height: 45px;
     outline: none;
@@ -56,13 +55,23 @@
     border-radius: 0px 20px 20px 0px;
     transition: all 0.4s;
 }
-.btn1:hover{
-    color: white;
+
+.btn1:hover {
+    color: var(--bg-background-color);
     background-color: var(--bg-color);
 }
 
-.btn-theme {
-    
+.btn1:hover > i{
+    color: var(--bg-background-color);
+    /* background-color: var(--bg-color); */
+}
+
+.btn-theme.bi-moon {
+    visibility: var(--visibility-btn-moon);
+}
+
+.btn-theme.bi-sun {
+    visibility: var(--visibility-btn-sun);
 }
 
 /* menu list */
@@ -105,7 +114,7 @@ li{
     font-weight: 500;
 	font-size: 15px;   
     color: var(--bg-color);
-    transition: all 0.4s;
+    transition: var(--transition-btn);
 }
 .text-light a:active, a:visited, a:link{
     color: var(--bg-color);
