--- a/components/header.html
+++ b/components/header.html
@@ -51,8 +51,8 @@
         <input class="px-2 search bg-color" type="search" placeholder="Pesquisar" aria-label="Search">
         <button class="btn1 px-3 bg-color" type="submit"><i class="bi bi-search bg-color"></i></button>
       </form>
-      <i id="btn-toggle-theme" class="btn-theme px-3 bi bi-moon bg-color"></i>
-      <i id="btn-toggle-theme" class="btn-theme px-3 bi bi-sun bg-color"></i>
+      <i class="btn-theme px-3 bi bi-moon bg-color"></i>
+      <i class="btn-theme px-3 bi bi-sun bg-color"></i>
   </div>
 </div>
 </nav>
