Changing the logo to Schneider

--- a/components/header.html
+++ b/components/header.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>World Hunger</title>
   <!-- browser icon -->
-  <link rel="icon" href="./img/logo2.png" type="image/png">
+  <link rel="icon" href="../img/logo-schneider.png" type="image/png">
   <!-- stylesheet -->
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/style-header.css">
@@ -28,11 +28,11 @@
 <body>
 <nav class="navbar navbar-expand-lg pb-2 mb-0 bg-color"> 
   <div class="container pb-3 bg-color">
-    <a class="navbar-brand mt-3 bg-color" href="index.html"><img src="img/logo.png" class="img-fluid bg-color"></a>
+    <a class="navbar-brand mt-4 bg-color" href="index.html"><img src="../img/logo-schneider.png" class="img-fluid w-100"></a>
     <button class="navbar-toggler bg-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon pt-1 bg-color"><i class="bi bi-list bg-color"></i></span>
     </button>
-    <div class="collapse navbar-collapse align-bottom mt-4 bg-color" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse mt-0 bg-color" id="navbarSupportedContent">
       <ul class="navbar-nav mt-0 m-auto mb-4 mb-lg-0 bg-color">
         <li class="nav-item mt-3 bg-color">
           <a class="nav-link active bg-color" aria-current="page" href="../a-crise-da-fome.html">A CRISE DA FOME</a>
@@ -47,12 +47,15 @@
           <a class="nav-link active bg-color" aria-current="page" href="../tome-uma-atitude.html">TOME UMA ATITUDE</a>
         </li>
       </ul>
-      <form class="d-flex mt-0 bg-color">
+      <form class="d-flex mt-3 bg-color">
         <input class="px-2 search bg-color" type="search" placeholder="Pesquisar" aria-label="Search">
         <button class="btn1 px-3 bg-color" type="submit"><i class="bi bi-search bg-color"></i></button>
       </form>
-      <i class="btn-theme px-3 bi bi-moon bg-color"></i>
-      <i class="btn-theme px-3 bi bi-sun bg-color"></i>
+      <div>
+        <i class="btn-theme mt-3 bi bi-moon bg-color"></i>
+        <i class="btn-theme mt-3 bi bi-sun bg-color"></i>
+      </div>
+      
   </div>
 </div>
 </nav>
