--- a/components/teste-footer.html
+++ b/components/teste-footer.html
@@ -4,52 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap · The most popular HTML, CSS, and JS library in the world.</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/">
-
-    <script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
-
-    <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    
+    <title>Schneider Electric · The most sustainable company in the world.</title>
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/apple-touch-icon.png"
-        sizes="180x180">
-    <link rel="icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32"
-        type="image/png">
-    <link rel="icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16"
-        type="image/png">
-    <link rel="manifest" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/manifest.json">
-    <link rel="mask-icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/safari-pinned-tab.svg"
-        color="#712cf9">
-    <link rel="icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/favicon.ico">
-    <meta name="theme-color" content="#712cf9">
+    <link rel="icon" href="../img/logo-schneider.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="../img/logo-schneider.png" sizes="16x16" type="image/png">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@getbootstrap">
-    <meta name="twitter:creator" content="@getbootstrap">
-    <meta name="twitter:title" content="Bootstrap">
-    <meta name="twitter:description"
-        content="Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.">
-    <meta name="twitter:image" content="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-social.png">
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="../css/bootstrap.css">
 
-    <meta property="og:url" content="https://getbootstrap.com/">
-    <meta property="og:title" content="Bootstrap">
-    <meta property="og:description"
-        content="Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-social.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="2000">
-    <meta property="og:image:height" content="1000">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
 
+    <!-- bootstrap -->
+    <script src="../js/color-modes.js"></script>
+    <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    
+    <meta name="theme-color" content="#97d700">
 </head>
 
 <body>
-    <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
+    <footer class="bd-footer py-md-5 bg-body-tertiary">
         <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
             <div class="row">
                 <div class="col-lg-3 mb-3">
@@ -75,7 +53,7 @@
                         <li class="mb-2">Currently v5.3.0.</li>
                     </ul>
                 </div>
-                <div class="col-6 col-lg-2 offset-lg-1 mb-3">
+                <div class="col-6 col-lg-2 offset-lg-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="/">Home</a></li>
@@ -87,7 +65,7 @@
                         <li class="mb-2"><a href="https://cottonbureau.com/people/bootstrap">Swag Store</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-lg-2 mb-3">
+                <div class="col-6 col-lg-2">
                     <h5>Guides</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="/docs/5.3/getting-started/">Getting started</a></li>
@@ -97,7 +75,7 @@
                         <li class="mb-2"><a href="/docs/5.3/getting-started/vite/">Vite</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-lg-2 mb-3">
+                <div class="col-6 col-lg-2">
                     <h5>Projects</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="https://github.com/twbs/bootstrap">Bootstrap 5</a></li>
@@ -107,24 +85,18 @@
                         <li class="mb-2"><a href="https://github.com/twbs/examples/">Examples repo</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-lg-2 mb-3">
+                <div class="col-6 col-lg-2">
                     <h5>Community</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues">Issues</a></li>
                         <li class="mb-2"><a href="https://github.com/twbs/bootstrap/discussions">Discussions</a></li>
                         <li class="mb-2"><a href="https://github.com/sponsors/twbs">Corporate sponsors</a></li>
                         <li class="mb-2"><a href="https://opencollective.com/bootstrap">Open Collective</a></li>
-                        <li class="mb-2"><a href="https://stackoverflow.com/questions/tagged/bootstrap-5">Stack
-                                Overflow</a></li>
+                        <li class="mb-2"><a href="https://stackoverflow.com/questions/tagged/bootstrap-5">Stack Overflow</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
-
-    <script src="https://getbootstrap.com/docs/5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
-    <script src="https://getbootstrap.com/docs/5.3/assets/js/docs.min.js"></script>
 </body>
 </html>
