--- a/components/teste-header.html
+++ b/components/teste-header.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR" data-bs-theme="auto">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +7,17 @@
     
     <title>Schneider Electric · The most sustainable company in the world.</title>
 
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
     <!-- Favicons -->
     <link rel="icon" href="../img/logo-schneider.png" sizes="32x32" type="image/png">
     <link rel="icon" href="../img/logo-schneider.png" sizes="16x16" type="image/png">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/carousel.css">
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
 
     <!-- bootstrap -->
-    <script src="./js/color-modes.js"></script>
+    <script src="../js/color-modes.js"></script>
     <link href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
     <meta name="theme-color" content="#97d700">
@@ -71,7 +74,7 @@
             <div class="offcanvas-lg offcanvas-end flex-grow-1" tabindex="-1" id="bdNavbar"
                 aria-labelledby="bdNavbarOffcanvasLabel" data-bs-scroll="true">
                 <div class="offcanvas-header px-4 pb-0">
-                    <h5 class="offcanvas-title text-white" id="bdNavbarOffcanvasLabel">Bootstrap</h5>
+                    <h5 class="offcanvas-title text-white" id="bdNavbarOffcanvasLabel">Schneider Electric</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                         aria-label="Close" data-bs-target="#bdNavbar"></button>
                 </div>
@@ -80,25 +83,25 @@
                     <hr class="d-lg-none text-white-50">
                     <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav">
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="/docs/5.3/getting-started/introduction/"
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
                                 onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Docs</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="/docs/5.3/examples/"
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
                                 onclick="ga('send', 'event', 'Navbar', 'Community links', 'Examples');">Examples</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="https://icons.getbootstrap.com/"
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
                                 onclick="ga('send', 'event', 'Navbar', 'Community links', 'Icons');" target="_blank"
                                 rel="noopener">Icons</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="https://themes.getbootstrap.com/"
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
                                 onclick="ga('send', 'event', 'Navbar', 'Community links', 'Themes');" target="_blank"
                                 rel="noopener">Themes</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="https://blog.getbootstrap.com/"
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
                                 onclick="ga('send', 'event', 'Navbar', 'Community links', 'Blog');" target="_blank"
                                 rel="noopener">Blog</a>
                         </li>
@@ -108,7 +111,7 @@
 
                     <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="https://github.com/twbs" target="_blank"
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#" target="_blank"
                                 rel="noopener">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="navbar-nav-svg"
                                     viewBox="0 0 512 499.36" role="img">
@@ -120,7 +123,7 @@
                             </a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="https://twitter.com/getbootstrap"
+                            <a class="nav-link py-2 px-0 px-lg-2" href="#"
                                 target="_blank" rel="noopener">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="navbar-nav-svg"
                                     viewBox="0 0 512 416.32" role="img">
@@ -191,92 +194,6 @@
             </div>
         </nav>
     </header>
-
-    <section class="main pt-5 pb-5">
-        <div class="my-5"></div>
-        <div class="container">
-          <div class="row pb-3">
-            <div class="col-lg-6 pb-2">
-              <p class="m-0">A fome mundial.</p>
-              <h1 class="title">World Hunger</h1>
-              <div class="line my-3"></div>
-              <p class="m-0 mt-4">
-                A fome se trata de uma ameaça universal.<br>
-                Os danos causados, especialmente, devido à guerra na Ucrânia e à COVID-19 continuam a prejudicar os agricultores, 
-                as cadeias de abastecimento globais e a deixar milhões de pessoas desempregadas.
-              </p> 
-              <p class="m-0 mt-4">
-                Conflitos, choques econômicos, extremos climáticos e aumento dos preços dos fertilizantes estão se combinando para 
-                criar uma crise alimentar de proporções sem precedentes. <br>
-                Até 828 milhões de pessoas não têm certeza de onde virá sua próxima refeição. <br>
-              </p>                   
-              <p class="m-0 mt-4">
-                Temos uma escolha: agir agora para salvar vidas e investir em soluções que garantam segurança alimentar, estabilidade e paz para todos, 
-                ou ver pessoas em todo o mundo enfrentando uma fome crescente.
-              </p>
-              <br>
-              <a href="a-crise-da-fome.html"><button class="mbtn1 mt-4">Saiba mais</button></a>
-              <a href="https://www.acaodacidadania.org.br/" target="_blank"><button class="mbtn3 mt-4 m-lg-2">♡ Doe agora</button></a>
-            </div>
-            <div class="col-lg-6"><img src="./img/img3.png" class="img-fluid w-100 img-a-crise-da-fome"></div>
-          </div>
-        </div>
-      </section>
-      <!--*************************  Impacto Global  ***************************-->
-      <section class="impacto-global pt-5 pb-5">
-        <div class="container">
-          <div class="row pb-3">
-            <div class="col-lg-6"><img src="./img/img2.png" class="img-fluid w-100 img-impacto-global"></div>
-            <div class="col-lg-6 mt-3">
-              <p class="m-0">Lorem ipsum</p>
-              <h1>Insegurança Alimentar</h1>
-              <div class="py-3"></div>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias fugiat velit expedita, explicabo delectus facere autem unde inventore aperiam, impedit ex assumenda error iure. Omnis, assumenda odit? Tempore, commodi quo.</p>            
-              <p class="m-0 mt-4">
-                A fome se trata de uma ameaça universal.<br>
-                Os danos causados, especialmente, devido à guerra na Ucrânia e à COVID-19 continuam a prejudicar os agricultores, 
-                as cadeias de abastecimento globais e a deixar milhões de pessoas desempregadas.
-              </p> 
-              <p class="m-0 mt-4">
-                Conflitos, choques econômicos, extremos climáticos e aumento dos preços dos fertilizantes estão se combinando para 
-                criar uma crise alimentar de proporções sem precedentes. <br>
-                Até 828 milhões de pessoas não têm certeza de onde virá sua próxima refeição. <br>
-              </p>                   
-              <a href="impacto-global.html"><button class="mbtn2 mbtn mt-5">Saiba mais</button></a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--*************************  Fome Zero  ***************************-->
-      <section class="fome-zero pt-5">
-        <div class="container">
-          <div class="row pb-3">
-            <div class="col-lg-6 mt-4">
-              <p class="m-0">Bem vindo(a) à</p>
-              <h1>Agricultura Sustentável</h1>
-              <div class="py-3"></div>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias fugiat velit expedita, explicabo delectus facere autem unde inventore aperiam, impedit ex assumenda error iure. Omnis, assumenda odit? Tempore, commodi quo.</p>            
-              <p class="m-0 mt-4">
-                A fome se trata de uma ameaça universal.<br>
-                Os danos causados, especialmente, devido à guerra na Ucrânia e à COVID-19 continuam a prejudicar os agricultores, 
-                as cadeias de abastecimento globais e a deixar milhões de pessoas desempregadas.
-              </p> 
-              <p class="m-0 mt-4">
-                Conflitos, choques econômicos, extremos climáticos e aumento dos preços dos fertilizantes estão se combinando para 
-                criar uma crise alimentar de proporções sem precedentes. <br>
-                Até 828 milhões de pessoas não têm certeza de onde virá sua próxima refeição. <br>
-              </p>                   
-              <p class="m-0 mt-4">
-                Temos uma escolha: agir agora para salvar vidas e investir em soluções que garantam segurança alimentar, estabilidade e paz para todos, 
-                ou ver pessoas em todo o mundo enfrentando uma fome crescente.
-              </p>
-              <a href="fome-zero.html"><button class="mbtn2 mbtn mt-5">Saiba mais</button></a>
-            </div>
-            <div class="col-lg-6"><img src="./img/img3.png" class="img-fluid w-100 img-fome-zero"></div>
-          </div>
-        </div>
-      </section>
-
     <script 
         src="https://getbootstrap.com/docs/5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
